<resources>
    <string name="app_name">Psymood</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="title">Name</string>
    <string name="todo">TODO</string>
    <string name="title_activity_navigation_home">NavigationHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="terms">Términos y Condiciones</string>
    <string name="version">Versión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="home">Inicio</string>
    <string name="psymood">Psymood</string>
    <string name="audio">Audio</string>
    <string name="camera">Cámara</string>
    <string name="state">Estado</string>
    <string name="error_weak_password">minímo 6 caracteres</string>
    <string name="error_invalid_password">contraseña no válida</string>
    <string name="error_invalid_email">correo  no válido</string>
    <string name="error_email_alredy_exist">email ya existente</string>
    <string name="task">Tareas</string>
    <string name="cero_task">0</string>
    <string name="two_points">:</string>
    <string name="about_us">Acerca de</string>
    <string name="politics">Política de Privacidad</string>
    <string name="edit_perfil">Editar perfil</string>
    <string name="settings_to_account">Ajustes de mi cuenta</string>
    <string name="privacy_politics">
    \n
    Psymood Enterprise ha creado la aplicación Psymood como una aplicación gratuita. Este SERVICIO es provisto por Psymood Enterprise sin costo y está diseñado para usarse tal cual.
    \n\n
    Esta página se utiliza para informar a los visitantes sobre nuestras políticas con la recopilación, uso y divulgación de información personal si alguien decide utilizar nuestro servicio.
    \n\n
    Si elige utilizar nuestro Servicio, entonces acepta la recopilación y el uso de información en relación con esta política. La información personal que recopilamos se utiliza para proporcionar y mejorar el Servicio. No utilizaremos ni compartiremos su información con nadie, excepto como se describe en esta Política de privacidad.
    \n\n
    Los términos utilizados en esta Política de privacidad tienen el mismo significado que en nuestros Términos y condiciones, a los que se puede acceder en Psymood a menos que se defina lo contrario en esta Política de privacidad.
    \n\n
    <b><i>Recolección de información y uso</i></b>
    \n\n
    Para una mejor experiencia, mientras utiliza nuestro Servicio, es posible que le solicitemos que nos proporcione cierta información de identificación personal, que incluye, entre otros, datos personales, selfies, grabaciones de voz y sus estados de ánimo. La información que solicitamos será retenida por nosotros y es utilizada como se describe en esta política de privacidad.
    \n\n
    La aplicación utiliza servicios de terceros que pueden recopilar información utilizada para identificarlo. Este es el enlace a la política de privacidad de terceros proveedores de servicios utilizados por la aplicación:
    \n\n
    https://policies.google.com/privacy
    \n\n
    <b><i>Datos de registro</i></b>
    \n\n
    Queremos informarle que cada vez que utiliza nuestro Servicio, en caso de un error en la aplicación, recopilamos datos e información (a través de productos de terceros) en su teléfono llamados datos de registro. Estos datos de registro pueden incluir información como la dirección ip de su dispositivo, el nombre del dispositivo, la versión del sistema operativo, la configuración de la aplicación cuando utiliza nuestro Servicio, la hora y la fecha de uso del Servicio y otras estadísticas.
    \n\n
    <b><i>Seguridad</i></b>
    \n\n
    Valoramos su confianza en proporcionarnos su información personal, por lo tanto, nos esforzamos por utilizar medios comercialmente aceptables para protegerla. Pero recuerde que ningún método de transmisión por Internet o método de almacenamiento electrónico es 100% seguro y confiable, y no podemos garantizar su seguridad absoluta.
    \n\n
    <b><i>Privacidad de los niños</i></b>
    \n\n
    Estos Servicios no se dirigen a ninguna persona menor de 13 años. No recopilamos a sabiendas información de identificación personal de niños menores de 13 años. En el caso de que descubramos que un niño menor de 13 años nos ha proporcionado información personal, la eliminamos inmediatamente de nuestros servidores. Si usted es padre o tutor y sabe que su hijo nos ha proporcionado información personal, contáctenos para que podamos realizar las acciones necesarias.
    \n\n
    <b><i>Cambios a esta política de privacidad</i></b>
    \n\n
    Podemos actualizar nuestra Política de privacidad de vez en cuando. Por lo tanto, se recomienda que revise esta página periódicamente en busca de cambios. Le notificaremos cualquier cambio publicando la nueva Política de privacidad en esta página. Estos cambios son efectivos inmediatamente después de su publicación en esta página.
    \n\n
    <b><i>Contáctenos</i></b>
    \n\n
    Si tiene alguna pregunta o sugerencia sobre nuestra Política de privacidad, no dude en contactarnos en <b>info.psymood@gmail.com</b>
    \n\n
    Este documento se actualizó por última vez el 26 de agosto de 2019.
    </string>
    <string name="terms_conditions">
    \n
    Estos términos y condiciones son un acuerdo entre la empresa Psymood Enterprise y usted. Este Acuerdo establece los términos y condiciones generales de su uso de la aplicación móvil Psymood y cualquiera de sus productos o servicios.
    \n\n
    <b><i>Cuentas y membresía</i></b>
    \n\n
    Debe tener al menos 13 años de edad para usar esta aplicación móvil. Al usar esta aplicación móvil y al aceptar este acuerdo, usted garantiza y declara que tiene al menos 13 años de edad. Si crea una cuenta en la Aplicación móvil, usted es responsable de mantener la seguridad de su cuenta y es totalmente responsable de todas las actividades que ocurran bajo la cuenta y cualquier otra acción tomada en relación con ella. Podemos, pero no tenemos la obligación de, monitorear y revisar nuevas cuentas antes de que pueda iniciar sesión y usar nuestros Servicios. Proporcionar información de contacto falsa de cualquier tipo puede resultar en la cancelación de su cuenta. Debe notificarnos de inmediato sobre cualquier uso no autorizado de su cuenta o cualquier otra violación de seguridad. No seremos responsables de ningún acto u omisión por su parte, incluidos los daños de cualquier tipo incurridos como resultado de dichos actos u omisiones. Podemos suspender, deshabilitar o eliminar su cuenta (o cualquier parte de la misma) si determinamos que ha violado alguna disposición de este Acuerdo o que su conducta o contenido tenderá a dañar nuestra reputación y buena voluntad. Si eliminamos su cuenta por los motivos anteriores, no puede volver a registrarse en nuestros Servicios. Podemos bloquear su dirección de correo electrónico y dirección de protocolo de Internet para evitar más registros.
    \n\n
    <b><i>Usos prohibidos</i></b>
    \n\n
    Además de otros términos establecidos en el acuerdo, tiene prohibido usar la aplicación móvil o su contenido: (a) para cualquier propósito ilegal; (b) solicitar a otros que realicen o participen en actos ilegales; (c) violar cualquier regulación, norma, ley u ordenanza local internacional, federal, provincial o estatal; (d) infringir o violar nuestros derechos de propiedad intelectual o los derechos de propiedad intelectual de terceros; (e) presentar información falsa o engañosa; (f) para cargar o transmitir virus o cualquier otro tipo de código malicioso que se utilizará o podrá utilizarse de cualquier manera que afecte la funcionalidad u operación del Servicio o de cualquier aplicación móvil relacionada, otras aplicaciones móviles o Internet; (g) a spam, phishing, pharm, pretexto, araña, rastreo o raspado; (h) para cualquier propósito obsceno o inmoral; o (i) interferir o eludir las características de seguridad del Servicio o cualquier aplicación móvil relacionada, otras aplicaciones móviles o Internet. Nos reservamos el derecho de terminar su uso del Servicio o cualquier aplicación móvil relacionada por violar cualquiera de los usos prohibidos.
    \n\n
    <b><i>Cambios y enmiendas</i></b>
    \n\n
    Nos reservamos el derecho de modificar este acuerdo o sus políticas relacionadas con la aplicación móvil o los Servicios en cualquier momento, a partir de la publicación de una versión actualizada de este acuerdo en la aplicación móvil. Cuando lo hagamos Cuando lo hagamos, revisaremos la fecha actualizada al final de esta página. El uso continuo de la aplicación móvil después de dichos cambios constituirá su consentimiento para dichos cambios.
    \n\n
    <b><i>Aceptación de estos términos</i></b>
    \n\n
    Usted reconoce que ha leído este acuerdo y acepta todos sus términos y condiciones. Al usar la aplicación móvil o sus servicios, usted acepta estar sujeto a este acuerdo. Si no acepta cumplir con los términos de este acuerdo, no está autorizado para usar o acceder a la aplicación móvil y sus servicios.
    \n\n
    <b><i>Contáctenos</i></b>
    \n\n
    Si desea comunicarse con nosotros para conocer más acerca de este Acuerdo o desea comunicarse con nosotros sobre cualquier asunto relacionado con él, puede enviar un correo electrónico a info.psymood@gmail.com
    \n\n
    Este documento se actualizó por última vez el 26 de agosto de 2019.
    </string>
    <string name="selfie_necesary">Aún te falta el selfie</string>
    <string name="selfie_task_completed">Objetivo diario conseguido</string>
    <string name="selfie_alredy_exist"> Ya has subido un selfie, intentalo mañana!</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="download_data">Descargar datos</string>
</resources>
