<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_outline"
            android:title="@string/state" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_mic"
            android:title="@string/audio" />
        <item
            android:id="@+id/nav_singOut"
            android:icon="@drawable/ic_round_power"
            android:title="@string/sing_out" />
    </group>

    <item android:title="@string/about_us">
        <menu>
            <item
                android:id="@+id/nav_terms"
                android:title="@string/terms" />
            <item
                android:id="@+id/nav_politics"
                android:title="@string/politics" />
            <item
                android:id="@+id/nav_version"
                android:title="@string/version" />
        </menu>
    </item>

</menu>
