<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/GreyBackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_user_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/nav_header_desc"
        app:civ_border_color="@color/White"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/muli_regular"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/GreyTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nav_user_photo"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/nav_user_photo"
        app:layout_constraintTop_toBottomOf="@+id/nav_user_name">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/muli_light"
            android:text="@string/edit_perfil"
            android:textColor="@color/Black" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/linkToSettings"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
